finish RegisterView
Signed-off-by: keta1 <k@ketal.icu>